--- a/pdfs/cv/pub_conf.bib
+++ b/pdfs/cv/pub_conf.bib
@@ -1,5 +1,5 @@
 @INPROCEEDINGS{2025PDCb,
-    author = {Steven R. Chesley and \textbf{R. Makadia} and David Herald and Davide Farnocchia and Shantanu P. Naidu and Alexandros Siakas and Damya Souami and Paolo Tanga and Sotirios Tsavdaridis and Kleomenis Tsiganis},
+    author = {Steven R. Chesley and Rahil Makadia and David Herald and Davide Farnocchia and Shantanu P. Naidu and Alexandros Siakas and Damya Souami and Paolo Tanga and Sotirios Tsavdaridis and Kleomenis Tsiganis},
     title = "{The post-DART heliocentric orbit of Didymos and implications for the effectiveness of the DART impact}",
     booktitle = "{9th IAA Planetary Defense Conference}",
     year = 2025,
@@ -7,7 +7,7 @@
 }
 
 @INPROCEEDINGS{2025PDC,
-    author = {\textbf{R. Makadia} and Davide Farnocchia and Brent W. Barbee and Siegfried Eggl},
+    author = {Rahil Makadia and Davide Farnocchia and Brent W. Barbee and Siegfried Eggl},
     title = "{Design constraints for asteroid deflection campaigns based on $\Delta$V estimation timelines}",
     booktitle = "{9th IAA Planetary Defense Conference}",
     year = 2025,
@@ -15,7 +15,7 @@
 }
 
 @INPROCEEDINGS{2025Hera,
-    author = {\textbf{R. Makadia} and Steven R. Chesley and David Herald and Davide Farnocchia and Shantanu P. Naidu and Alexandros Siakas and Damya Souami and Paolo Tanga and Sotirios Tsavdaridis and Kleomenis Tsiganis},
+    author = {Rahil Makadia and Steven R. Chesley and David Herald and Davide Farnocchia and Shantanu P. Naidu and Alexandros Siakas and Damya Souami and Paolo Tanga and Sotirios Tsavdaridis and Kleomenis Tsiganis},
     title = "{First estimate of the heliocentric changes in the Didymos system after the DART impact}",
     booktitle = "{April 2025 Hera Team Meeting}",
     year = 2025,
@@ -23,7 +23,7 @@
 }
 
 @INPROCEEDINGS{2025SFM,
-    author = {\textbf{R. Makadia} and Davide Farnocchia and Steven R Chesley and Siegfried Eggl},
+    author = {Rahil Makadia and Davide Farnocchia and Steven R Chesley and Siegfried Eggl},
     title = "{A novel method for computing state transition matrices using the unscented transform}",
     booktitle = "{35th AAS/AIAA Space Flight Mechanics Meeting}",
     year = 2025,
@@ -32,7 +32,7 @@
 }
 
 @INPROCEEDINGS{2024IAUGA,
-    author = {\textbf{R. Makadia} and Siegfried Eggl},
+    author = {Rahil Makadia and Siegfried Eggl},
     title = "{GRSS: An open-source tool for high precision asteroid orbit determination and orbit propagation}",
     booktitle = "{32nd International Astronomical Union (IAU) General Assembly}",
     year = 2024,
@@ -42,7 +42,7 @@
 }
 
 @INPROCEEDINGS{2024FM,
-    author = {\textbf{R. Makadia} and Steven R Chesley and Davide Farnocchia and Siegfried Eggl},
+    author = {Rahil Makadia and Steven R Chesley and Davide Farnocchia and Siegfried Eggl},
     title = "{A novel method for computing state transition matrices using the unscented transform}",
     booktitle = "{Dynamics and Physics in the Solar System -- The legacy of Paolo Farinella and Andrea Milani}",
     year = 2024,
@@ -51,7 +51,7 @@
 }
 
 @INPROCEEDINGS{2023DPS,
-    author = {\textbf{R. Makadia} and Steven R Chesley and Davide Farnocchia and Siegfried Eggl},
+    author = {Rahil Makadia and Steven R Chesley and Davide Farnocchia and Siegfried Eggl},
     title = "{GRSS: An open-source small-body science tool for planetary defense}",
     booktitle = "{55th AAS Division for Planetary Sciences Meeting}",
     year = 2023,
@@ -61,7 +61,7 @@
 }
 
 @INPROCEEDINGS{2023ACM,
-    author = {\textbf{R. Makadia} and Steven R Chesley and Siegfried Eggl and Damya Souami and Paolo Tanga and Kleomenis Tsiganis},
+    author = {Rahil Makadia and Steven R Chesley and Siegfried Eggl and Damya Souami and Paolo Tanga and Kleomenis Tsiganis},
     title = "{The DART mission: Measurability of the heliocentric changes to the (65803) Didymos system}",
     booktitle = "{14th Asteroids, Comets, Meteors Conference}",
     year = 2023,
@@ -71,7 +71,7 @@
 }
 
 @INPROCEEDINGS{2023ACM2,
-    author = {D. C. Richardson and H. F. Agrusa and B. Barbee and A. F. Cheng and S. R. Chesley and S. Eggl and E. G. Fahnestock and D. P. Hamilton and M. Hirabayashi and S. A. Jacobson and J. R. Lyzhoft and \textbf{R. Makadia} and J. McMahon and A. J. Meyer and S. Naidu and R. Nakano and P. Pravec and S. D. Raducan and D. J. Scheeres and P. Scheirich and S. R. Schwartz},
+    author = {D. C. Richardson and H. F. Agrusa and B. Barbee and A. F. Cheng and S. R. Chesley and S. Eggl and E. G. Fahnestock and D. P. Hamilton and M. Hirabayashi and S. A. Jacobson and J. R. Lyzhoft and Rahil Makadia and J. McMahon and A. J. Meyer and S. Naidu and R. Nakano and P. Pravec and S. D. Raducan and D. J. Scheeres and P. Scheirich and S. R. Schwartz},
     title = "{The dynamical state of the Didymos System before and after the DART Impact}",
     booktitle = "{14th Asteroids, Comets, Meteors Conference}",
     year = 2023,
@@ -81,7 +81,7 @@
 }
 
 @INPROCEEDINGS{2023ACM3,
-    author = {R. Nakano and M. Hirabayashi and S.D. Raducan and P. Pravec and P. Scheirich and H.F. Agrusa and A.J. Meyer and D.C. Richardson and M. Jutzi and B. Barbee and \textbf{R. Makadia} and D. Farnocchia},
+    author = {R. Nakano and M. Hirabayashi and S.D. Raducan and P. Pravec and P. Scheirich and H.F. Agrusa and A.J. Meyer and D.C. Richardson and M. Jutzi and B. Barbee and Rahil Makadia and D. Farnocchia},
     title = "{Mutual orbit perturbations due to Dimorphos's deformation after the DART impact}",
     booktitle = "{14th Asteroids, Comets, Meteors Conference}",
     year = 2023,
@@ -91,7 +91,7 @@
 }
 
 @INPROCEEDINGS{2023DARTITM,
-    author = {\textbf{R. Makadia} and Siegfried Eggl},
+    author = {Rahil Makadia and Siegfried Eggl},
     title = "{Heliocentric beta ($\beta_\odot$) measurability}",
     booktitle = "{May 2023 DART Investigation Team Meeting}",
     year = 2023,
@@ -99,7 +99,7 @@
 }
 
 @INPROCEEDINGS{2023PDC,
-    author = {\textbf{R. Makadia} and Sabina Raducan and Eugene Fahnestock and Steven Chesley and Siegfried Eggl},
+    author = {Rahil Makadia and Sabina Raducan and Eugene Fahnestock and Steven Chesley and Siegfried Eggl},
     title = "{Measurability of the heliocentric momentum enhancement of the Didymos system from the DART impact}",
     booktitle = "{8th IAA Planetary Defense Conference}",
     year = 2023,
@@ -108,7 +108,7 @@
 }
 
 @INPROCEEDINGS{2023SFM,
-    author = {Daniel Engel and \textbf{R. Makadia} and Zachary Putnam},
+    author = {Daniel Engel and Rahil Makadia and Zachary Putnam},
     title = "{Assessment of aerogravity assist at Venus using blunt-body vehicles}",
     booktitle = "{33rd AAS/AIAA Space Flight Mechanics Meeting}",
     year = 2023,
@@ -117,7 +117,7 @@
 }
 
 @INPROCEEDINGS{2022FALLAGU,
-    author = {\textbf{R. Makadia} and Sabina Raducan and Eugene Fahnestock and Siegfried Eggl},
+    author = {Rahil Makadia and Sabina Raducan and Eugene Fahnestock and Siegfried Eggl},
     title = "{Post-impact prediction of changes to the heliocentric orbit of the (65803) Didymos system due to the DART mission}",
     booktitle = "{2022 AGU Fall Meeting}",
     year = 2022,
@@ -126,7 +126,7 @@
 }
 
 @INPROCEEDINGS{2022FALLAGU2,
-    author = {{Richardson}, Derek C. and {Agrusa}, Harrison F. and {Barbee}, Brent and {Campo Bagatin}, Adriano and {Eggl}, Siegfried and {Ferrari}, Fabio and {Fahnestock}, Eugene and {Gkolias}, Ioannis and {Fuentes-Mu{\~n}oz}, Oscar and {Hirabayashi}, Masatoshi and {Jacobson}, Seth Andrew and {Karatekin}, Ozgur and {Jutzi}, Martin and {Lyzhoft}, Joshua R. and \textbf{R. Makadia} and {McMahon}, Jay and {Meyer}, Alex and {Michel}, Patrick and {Nakano}, Ryota and {Noiset}, Guillaume and {Raducan}, Sabina and {Rambaux}, Nicolas and {Schwartz}, Stephen R. and {Tsiganis}, Kleomenis and {Zhang}, Yun},
+    author = {{Richardson}, Derek C. and {Agrusa}, Harrison F. and {Barbee}, Brent and {Campo Bagatin}, Adriano and {Eggl}, Siegfried and {Ferrari}, Fabio and {Fahnestock}, Eugene and {Gkolias}, Ioannis and {Fuentes-Mu{\~n}oz}, Oscar and {Hirabayashi}, Masatoshi and {Jacobson}, Seth Andrew and {Karatekin}, Ozgur and {Jutzi}, Martin and {Lyzhoft}, Joshua R. and Rahil Makadia and {McMahon}, Jay and {Meyer}, Alex and {Michel}, Patrick and {Nakano}, Ryota and {Noiset}, Guillaume and {Raducan}, Sabina and {Rambaux}, Nicolas and {Schwartz}, Stephen R. and {Tsiganis}, Kleomenis and {Zhang}, Yun},
     title = "{First Assessment of the Dynamical State of the Didymos Binary Asteroid System Before and After the DART Impact}",
     booktitle = "{2022 AGU Fall Meeting}",
     year = 2022,
@@ -135,7 +135,7 @@
 }
 
 @INPROCEEDINGS{2022DARTITM,
-    author = {\textbf{R. Makadia} and Siegfried Eggl},
+    author = {Rahil Makadia and Siegfried Eggl},
     title = "{Heliocentric beta ($\beta_\odot$) estimation}",
     booktitle = "{November 2022 DART Investigation Team Meeting}",
     year = 2022,
@@ -143,7 +143,7 @@
 }
 
 @INPROCEEDINGS{2022AASGNC,
-    author = {\textbf{R. Makadia} and Siegfried Eggl and Eugene Fahnestock},
+    author = {Rahil Makadia and Siegfried Eggl and Eugene Fahnestock},
     title = "{The Double Asteroid Redirection Test (DART): Expected changes to the heliocentric orbit of (65803) Didymos}",
     booktitle = "{44th AAS Guidance, Navigation, and Control Conference}",
     year = 2022,
@@ -152,7 +152,7 @@
 }
 
 @INPROCEEDINGS{2021DPS,
-    author = {\textbf{R. Makadia} and Siegfried Eggl and Eugene Fahnestock},
+    author = {Rahil Makadia and Siegfried Eggl and Eugene Fahnestock},
     title = "{Changes to the heliocentric orbit of (65803) Didymos system due to DART: Simulation and momentum enhancement estimation}",
     booktitle = "{53rd AAS Division for Planetary Sciences Meeting}",
     year = 2021,
@@ -162,7 +162,7 @@
 }
 
 @INPROCEEDINGS{2021DARTITM_1,
-    author = {\textbf{R. Makadia} and Siegfried Eggl and Eugene Fahnestock},
+    author = {Rahil Makadia and Siegfried Eggl and Eugene Fahnestock},
     title = "{Changing the heliocentric orbit of the Didymos system with DART: Implications for $\beta$ determination}",
     booktitle = "{June 2021 DART Investigation Team Meeting}",
     year = 2021,
@@ -171,7 +171,7 @@
 }
 
 @INPROCEEDINGS{2021DARTITM_2,
-    author = {\textbf{R. Makadia} and Siegfried Eggl and Eugene Fahnestock and Damya Souami and Davide Farnocchia},
+    author = {Rahil Makadia and Siegfried Eggl and Eugene Fahnestock and Damya Souami and Davide Farnocchia},
     title = "{Estimating $\beta$ via the heliocentric orbit of Didymos}",
     booktitle = "{June 2021 DART Investigation Team Meeting}",
     year = 2021,
@@ -180,7 +180,7 @@
 }
 
 @INPROCEEDINGS{2021PDC,
-    author = {\textbf{R. Makadia} and Siegfried Eggl and Eugene Fahnestock and Steve Chesley and Davide Farnocchia and Nian Tong},
+    author = {Rahil Makadia and Siegfried Eggl and Eugene Fahnestock and Steve Chesley and Davide Farnocchia and Nian Tong},
     title = "{Changing the heliocentric orbit of the Didymos system with DART}",
     booktitle = "{7th IAA Planetary Defense Conference}",
     year = 2021,
