--- a/pdfs/cv/pub_invited.bib
+++ b/pdfs/cv/pub_invited.bib
@@ -1,5 +1,5 @@
 @INPROCEEDINGS{2024ARCS,
-    author = {\textbf{R. Makadia}},
+    author = {Rahil Makadia},
     title = "{Planetary Defense: How we (and I) got here, What we’re doing, and Where we’re going...}",
     booktitle = "{ARCS Foundation Illinois Chapter Annual Holiday Luncheon}",
     year = 2024,
