--- a/pdfs/cv/pub_journal.bib
+++ b/pdfs/cv/pub_journal.bib
@@ -1,5 +1,5 @@
 @article{Makadia2025c,
-	author = {\textbf{R. Makadia} and Davide Farnocchia and Steven R. Chesley and Siegfried Eggl},
+	author = {Rahil Makadia and Davide Farnocchia and Steven R. Chesley and Siegfried Eggl},
 	journal = {Celestial Mechanics and Dynamical Astronomy},
 	title = {{A Novel Method for Computing State Transition Matrices due to the Unscented Transform}},
 	year = {2025},
@@ -8,7 +8,7 @@
 }
 
 @article{Makadia2025b,
-	author = {\textbf{R. Makadia} and Davide Farnocchia and Steven R. Chesley and Siegfried Eggl},
+	author = {Rahil Makadia and Davide Farnocchia and Steven R. Chesley and Siegfried Eggl},
 	journal = {Journal of Open Source Software},
 	title = {{Gauss-Radau Small-body Simulator (GRSS): An Open-Source Library for Planetary Defense}},
 	year = {2025},
@@ -22,7 +22,7 @@
 }
 
 @article{Makadia2025,
-	author    = {\textbf{R. Makadia} and Davide Farnocchia and Steven R. Chesley and Siegfried Eggl},
+	author    = {Rahil Makadia and Davide Farnocchia and Steven R. Chesley and Siegfried Eggl},
 	journal   = {The Planetary Science Journal},
 	title     = {{Gauss-Radau Small-body Simulator (GRSS): An Open-Source Library for Planetary Defense}},
 	year      = {2025},
@@ -31,7 +31,7 @@
 }
 
 @article{Hirabayashi2025,
-	author={Hirabayashi, Masatoshi and Raducan, Sabina D. and Sunshine, Jessica M. and Farnham, Tony L. and Deshapriya, J. D. P. and Li, Jian-Yang and Tancredi, Gonzalo and Chesley, Steven R. and Daly, R. Terik and Ernst, Carolyn M. and Gai, Igor and Hasselmann, Pedro H. and Naidu, Shantanu P. and Nair, Hari and Palmer, Eric E. and Waller, C. Dany and Zinzi, Angelo and Agrusa, Harrison F. and Barbee, Brent W. and Syal, Megan Bruck and Collins, Gareth S. and Davison, Thomas M. and DeCoster, Mallory E. and Jutzi, Martin and Kumamoto, Kathryn M. and Moskovitz, Nicholas A. and Lyzhoft, Joshua R. and Schwartz, Stephen R. and Abell, Paul A. and Barnouin, Olivier S. and Chabot, Nancy L. and Cheng, Andrew F. and Dotto, Elisabetta and Fahnestock, Eugene G. and Michel, Patrick and Richardson, Derek C. and Rivkin, Andrew S. and Stickle, Angela M. and Thomas, Cristina A. and Beccarelli, Joel and Brucato, John R. and Dall'Ora, Massimo and Corte, Vincenzo Della and Epifani, Elena Mazzotta and Ieva, Simone and Impresario, Gabriele and Ivanovski, Stavro and Lucchetti, Alice and Modenini, Dario and Pajola, Maurizio and Palumbo, Pasquale and Pirrotta, Simone and Poggiali, Giovanni and Rossi, Alessandro and Tortora, Paolo and Tusberti, Filippo and Zannoni, Marco and Zanotti, Giovanni and Ferrari, Fabio and Glenar, David A. and Herreros, Isabel and Jacobson, Seth A. and Karatekin, {\"O}zg{\"u}r and Lazzarin, Monica and Lolachi, Ramin and Lucas, Michael P. and \textbf{R. Makadia} and Marzari, Francesco and Merrill, Colby C. and Migliorini, Alessandra and Nakano, Ryota and Orm{\"o}, Jens and S{\'a}nchez, Paul and Senel, Cem Berk and Soldini, Stefania and Stubbs, Timothy J.},
+	author={Hirabayashi, Masatoshi and Raducan, Sabina D. and Sunshine, Jessica M. and Farnham, Tony L. and Deshapriya, J. D. P. and Li, Jian-Yang and Tancredi, Gonzalo and Chesley, Steven R. and Daly, R. Terik and Ernst, Carolyn M. and Gai, Igor and Hasselmann, Pedro H. and Naidu, Shantanu P. and Nair, Hari and Palmer, Eric E. and Waller, C. Dany and Zinzi, Angelo and Agrusa, Harrison F. and Barbee, Brent W. and Syal, Megan Bruck and Collins, Gareth S. and Davison, Thomas M. and DeCoster, Mallory E. and Jutzi, Martin and Kumamoto, Kathryn M. and Moskovitz, Nicholas A. and Lyzhoft, Joshua R. and Schwartz, Stephen R. and Abell, Paul A. and Barnouin, Olivier S. and Chabot, Nancy L. and Cheng, Andrew F. and Dotto, Elisabetta and Fahnestock, Eugene G. and Michel, Patrick and Richardson, Derek C. and Rivkin, Andrew S. and Stickle, Angela M. and Thomas, Cristina A. and Beccarelli, Joel and Brucato, John R. and Dall'Ora, Massimo and Corte, Vincenzo Della and Epifani, Elena Mazzotta and Ieva, Simone and Impresario, Gabriele and Ivanovski, Stavro and Lucchetti, Alice and Modenini, Dario and Pajola, Maurizio and Palumbo, Pasquale and Pirrotta, Simone and Poggiali, Giovanni and Rossi, Alessandro and Tortora, Paolo and Tusberti, Filippo and Zannoni, Marco and Zanotti, Giovanni and Ferrari, Fabio and Glenar, David A. and Herreros, Isabel and Jacobson, Seth A. and Karatekin, {\"O}zg{\"u}r and Lazzarin, Monica and Lolachi, Ramin and Lucas, Michael P. and Makadia, Rahil and Marzari, Francesco and Merrill, Colby C. and Migliorini, Alessandra and Nakano, Ryota and Orm{\"o}, Jens and S{\'a}nchez, Paul and Senel, Cem Berk and Soldini, Stefania and Stubbs, Timothy J.},
 	title={Elliptical ejecta of asteroid Dimorphos is due to its surface curvature},
 	journal={Nature Communications},
 	year={2025},
@@ -53,7 +53,7 @@
 	volume = {5},
 	number = {8},
 	pages = {182},
-	author = {Derek C. Richardson and Harrison F. Agrusa and Brent Barbee and Rachel H. Cueva and Fabio Ferrari and Seth A. Jacobson and \textbf{R. Makadia} and Alex J. Meyer and Patrick Michel and Ryota Nakano and Yun Zhang and Paul Abell and Colby C. Merrill and Adriano Campo Bagatin and Olivier Barnouin and Nancy L. Chabot and Andrew F. Cheng and Steven R. Chesley and R. Terik Daly and Siegfried Eggl and Carolyn M. Ernst and Eugene G. Fahnestock and Tony L. Farnham and Oscar Fuentes-Muñoz and Edoardo Gramigna and Douglas P. Hamilton and Masatoshi Hirabayashi and Martin Jutzi and Josh Lyzhoft and Riccardo Lasagni Manghi and Jay McMahon and Fernando Moreno and Naomi Murdoch and Shantanu P. Naidu and Eric E. Palmer and Paolo Panicucci and Laurent Pou and Petr Pravec and Sabina D. Raducan and Andrew S. Rivkin and Alessandro Rossi and Paul Sánchez and Daniel J. Scheeres and Peter Scheirich and Stephen R. Schwartz and Damya Souami and Gonzalo Tancredi and Paolo Tanga and Paolo Tortora and Josep M. Trigo-Rodríguez and Kleomenis Tsiganis and John Wimarsson and Marco Zannoni},
+	author = {Derek C. Richardson and Harrison F. Agrusa and Brent Barbee and Rachel H. Cueva and Fabio Ferrari and Seth A. Jacobson and Rahil Makadia and Alex J. Meyer and Patrick Michel and Ryota Nakano and Yun Zhang and Paul Abell and Colby C. Merrill and Adriano Campo Bagatin and Olivier Barnouin and Nancy L. Chabot and Andrew F. Cheng and Steven R. Chesley and R. Terik Daly and Siegfried Eggl and Carolyn M. Ernst and Eugene G. Fahnestock and Tony L. Farnham and Oscar Fuentes-Muñoz and Edoardo Gramigna and Douglas P. Hamilton and Masatoshi Hirabayashi and Martin Jutzi and Josh Lyzhoft and Riccardo Lasagni Manghi and Jay McMahon and Fernando Moreno and Naomi Murdoch and Shantanu P. Naidu and Eric E. Palmer and Paolo Panicucci and Laurent Pou and Petr Pravec and Sabina D. Raducan and Andrew S. Rivkin and Alessandro Rossi and Paul Sánchez and Daniel J. Scheeres and Peter Scheirich and Stephen R. Schwartz and Damya Souami and Gonzalo Tancredi and Paolo Tanga and Paolo Tortora and Josep M. Trigo-Rodríguez and Kleomenis Tsiganis and John Wimarsson and Marco Zannoni},
 	title = {{The Dynamical State of the Didymos System before and after the DART Impact}},
 	journal = {The Planetary Science Journal},
 }
@@ -67,7 +67,7 @@
 	volume = {5},
 	number = {2},
 	pages = {49},
-	author = {Nancy L. Chabot and Andrew S. Rivkin and Andrew F. Cheng and Olivier S. Barnouin and Eugene G. Fahnestock and Derek C. Richardson and Angela M. Stickle and Cristina A. Thomas and Carolyn M. Ernst and R. Terik Daly and Elisabetta Dotto and Angelo Zinzi and Steven R. Chesley and Nicholas A. Moskovitz and Brent W. Barbee and Paul Abell and Harrison F. Agrusa and Michele T. Bannister and Joel Beccarelli and Dmitriy L. Bekker and Megan Bruck Syal and Bonnie J. Buratti and Michael W. Busch and Adriano Campo Bagatin and Joseph P. Chatelain and Sidney Chocron and Gareth S. Collins and Luca Conversi and Thomas M. Davison and Mallory E. DeCoster and J. D. Prasanna Deshapriya and Siegfried Eggl and Raymond C. Espiritu and Tony L. Farnham and Marin Ferrais and Fabio Ferrari and Dora Föhring and Oscar Fuentes-Muñoz and Igor Gai and Carmine Giordano and David A. Glenar and Edward Gomez and Dawn M. Graninger and Simon F. Green and Sarah Greenstreet and Pedro H. Hasselmann and Isabel Herreros and Masatoshi Hirabayashi and Marek Husárik and Simone Ieva and Stavro L. Ivanovski and Samuel L. Jackson and Emmanuel Jehin and Martin Jutzi and Ozgur Karatekin and Matthew M. Knight and Ludmilla Kolokolova and Kathryn M. Kumamoto and Michael Küppers and Fiorangela La Forgia and Monica Lazzarin and Jian-Yang Li and Tim A. Lister and Ramin Lolachi and Michael P. Lucas and Alice Lucchetti and Robert Luther and \textbf{R. Makadia} and Elena Mazzotta Epifani and Jay McMahon and Gianmario Merisio and Colby C. Merrill and Alex J. Meyer and Patrick Michel and Marco Micheli and Alessandra Migliorini and Kate Minker and Dario Modenini and Fernando Moreno and Naomi Murdoch and Brian Murphy and Shantanu P. Naidu and Hari Nair and Ryota Nakano and Cyrielle Opitom and Jens Ormö and J. Michael Owen and Maurizio Pajola and Eric E. Palmer and Pasquale Palumbo and Paolo Panicucci and Laura M. Parro and Jason M. Pearl and Antti Penttilä and Davide Perna and Elisabeta Petrescu and Petr Pravec and Sabina D. Raducan and K. T. Ramesh and Ryan Ridden-Harper and Juan L. Rizos and Alessandro Rossi and Nathan X. Roth and Agata Rożek and Benjamin Rozitis and Eileen V. Ryan and William H. Ryan and Paul Sánchez and Toni Santana-Ros and Daniel J. Scheeres and Peter Scheirich and Cem Berk Senel and Colin Snodgrass and Stefania Soldini and Damya Souami and Thomas S. Statler and Rachel Street and Timothy J. Stubbs and Jessica M. Sunshine and Nicole J. Tan and Gonzalo Tancredi and Calley L. Tinsman and Paolo Tortora and Filippo Tusberti and James D. Walker and C. Dany Waller and Kai Wünnemann and Marco Zannoni and Yun Zhang},
+	author = {Nancy L. Chabot and Andrew S. Rivkin and Andrew F. Cheng and Olivier S. Barnouin and Eugene G. Fahnestock and Derek C. Richardson and Angela M. Stickle and Cristina A. Thomas and Carolyn M. Ernst and R. Terik Daly and Elisabetta Dotto and Angelo Zinzi and Steven R. Chesley and Nicholas A. Moskovitz and Brent W. Barbee and Paul Abell and Harrison F. Agrusa and Michele T. Bannister and Joel Beccarelli and Dmitriy L. Bekker and Megan Bruck Syal and Bonnie J. Buratti and Michael W. Busch and Adriano Campo Bagatin and Joseph P. Chatelain and Sidney Chocron and Gareth S. Collins and Luca Conversi and Thomas M. Davison and Mallory E. DeCoster and J. D. Prasanna Deshapriya and Siegfried Eggl and Raymond C. Espiritu and Tony L. Farnham and Marin Ferrais and Fabio Ferrari and Dora Föhring and Oscar Fuentes-Muñoz and Igor Gai and Carmine Giordano and David A. Glenar and Edward Gomez and Dawn M. Graninger and Simon F. Green and Sarah Greenstreet and Pedro H. Hasselmann and Isabel Herreros and Masatoshi Hirabayashi and Marek Husárik and Simone Ieva and Stavro L. Ivanovski and Samuel L. Jackson and Emmanuel Jehin and Martin Jutzi and Ozgur Karatekin and Matthew M. Knight and Ludmilla Kolokolova and Kathryn M. Kumamoto and Michael Küppers and Fiorangela La Forgia and Monica Lazzarin and Jian-Yang Li and Tim A. Lister and Ramin Lolachi and Michael P. Lucas and Alice Lucchetti and Robert Luther and Rahil Makadia and Elena Mazzotta Epifani and Jay McMahon and Gianmario Merisio and Colby C. Merrill and Alex J. Meyer and Patrick Michel and Marco Micheli and Alessandra Migliorini and Kate Minker and Dario Modenini and Fernando Moreno and Naomi Murdoch and Brian Murphy and Shantanu P. Naidu and Hari Nair and Ryota Nakano and Cyrielle Opitom and Jens Ormö and J. Michael Owen and Maurizio Pajola and Eric E. Palmer and Pasquale Palumbo and Paolo Panicucci and Laura M. Parro and Jason M. Pearl and Antti Penttilä and Davide Perna and Elisabeta Petrescu and Petr Pravec and Sabina D. Raducan and K. T. Ramesh and Ryan Ridden-Harper and Juan L. Rizos and Alessandro Rossi and Nathan X. Roth and Agata Rożek and Benjamin Rozitis and Eileen V. Ryan and William H. Ryan and Paul Sánchez and Toni Santana-Ros and Daniel J. Scheeres and Peter Scheirich and Cem Berk Senel and Colin Snodgrass and Stefania Soldini and Damya Souami and Thomas S. Statler and Rachel Street and Timothy J. Stubbs and Jessica M. Sunshine and Nicole J. Tan and Gonzalo Tancredi and Calley L. Tinsman and Paolo Tortora and Filippo Tusberti and James D. Walker and C. Dany Waller and Kai Wünnemann and Marco Zannoni and Yun Zhang},
 	title = "{Achievement of the Planetary Defense Investigations of the Double Asteroid Redirection Test (DART) Mission}",
 	journal = {The Planetary Science Journal},
 }
@@ -81,13 +81,13 @@
 	volume = {5},
 	number = {2},
 	pages = {38},
-	author = {\textbf{R. Makadia} and Steven R. Chesley and Davide Farnocchia and Shantanu P. Naidu and Damya Souami and Paolo Tanga and Kleomenis Tsiganis and Masatoshi Hirabayashi and Siegfried Eggl},
+	author = {Rahil Makadia and Steven R. Chesley and Davide Farnocchia and Shantanu P. Naidu and Damya Souami and Paolo Tanga and Kleomenis Tsiganis and Masatoshi Hirabayashi and Siegfried Eggl},
 	title = {{Measurability of the Heliocentric Momentum Enhancement from a Kinetic Impact: The Double Asteroid Redirection Test (DART) Mission}},
 	journal = {The Planetary Science Journal},
 }
 
 @article{Li2023,
-	author = {Li, Jian-Yang and Hirabayashi, Masatoshi and Farnham, Tony L. and Sunshine, Jessica M. and Knight, Matthew M. and Tancredi, Gonzalo and Moreno, Fernando and Murphy, Brian and Opitom, Cyrielle and Chesley, Steve and Scheeres, Daniel J. and Thomas, Cristina A. and Fahnestock, Eugene G. and Cheng, Andrew F. and Dressel, Linda and Ernst, Carolyn M. and Ferrari, Fabio and Fitzsimmons, Alan and Ieva, Simone and Ivanovski, Stavro L. and Kareta, Teddy and Kolokolova, Ludmilla and Lister, Tim and Raducan, Sabina D. and Rivkin, Andrew S. and Rossi, Alessandro and Soldini, Stefania and Stickle, Angela M. and Vick, Alison and Vincent, Jean-Baptiste and Weaver, Harold A. and Bagnulo, Stefano and Bannister, Michele T. and Cambioni, Saverio and Bagatin, Adriano Campo and Chabot, Nancy L. and Cremonese, Gabriele and Daly, R. Terik and Dotto, Elisabetta and Glenar, David A. and Granvik, Mikael and Hasselmann, Pedro H. and Herreros, Isabel and Jacobson, Seth and Jutzi, Martin and Kohout, Tomas and La Forgia, Fiorangela and Lazzarin, Monica and Lin, Zhong-Yi and Lolachi, Ramin and Lucchetti, Alice and \textbf{R. Makadia} and Epifani, Elena Mazzotta and Michel, Patrick and Migliorini, Alessandra and Moskovitz, Nicholas A. and Orm{\"o}, Jens and Pajola, Maurizio and S{\'a}nchez, Paul and Schwartz, Stephen R. and Snodgrass, Colin and Steckloff, Jordan and Stubbs, Timothy J. and Trigo-Rodr{\'i}guez, Josep M.},
+	author = {Li, Jian-Yang and Hirabayashi, Masatoshi and Farnham, Tony L. and Sunshine, Jessica M. and Knight, Matthew M. and Tancredi, Gonzalo and Moreno, Fernando and Murphy, Brian and Opitom, Cyrielle and Chesley, Steve and Scheeres, Daniel J. and Thomas, Cristina A. and Fahnestock, Eugene G. and Cheng, Andrew F. and Dressel, Linda and Ernst, Carolyn M. and Ferrari, Fabio and Fitzsimmons, Alan and Ieva, Simone and Ivanovski, Stavro L. and Kareta, Teddy and Kolokolova, Ludmilla and Lister, Tim and Raducan, Sabina D. and Rivkin, Andrew S. and Rossi, Alessandro and Soldini, Stefania and Stickle, Angela M. and Vick, Alison and Vincent, Jean-Baptiste and Weaver, Harold A. and Bagnulo, Stefano and Bannister, Michele T. and Cambioni, Saverio and Bagatin, Adriano Campo and Chabot, Nancy L. and Cremonese, Gabriele and Daly, R. Terik and Dotto, Elisabetta and Glenar, David A. and Granvik, Mikael and Hasselmann, Pedro H. and Herreros, Isabel and Jacobson, Seth and Jutzi, Martin and Kohout, Tomas and La Forgia, Fiorangela and Lazzarin, Monica and Lin, Zhong-Yi and Lolachi, Ramin and Lucchetti, Alice and Makadia, Rahil and Epifani, Elena Mazzotta and Michel, Patrick and Migliorini, Alessandra and Moskovitz, Nicholas A. and Orm{\"o}, Jens and Pajola, Maurizio and S{\'a}nchez, Paul and Schwartz, Stephen R. and Snodgrass, Colin and Steckloff, Jordan and Stubbs, Timothy J. and Trigo-Rodr{\'i}guez, Josep M.},
 	title="{Ejecta from the DART-produced active asteroid Dimorphos}",
 	journal={Nature},
 	year={2023},
@@ -102,7 +102,7 @@
 }
 
 @article{Statler2022,
-	author = {Thomas S. Statler and Sabina D. Raducan and Olivier S. Barnouin and Mallory E. DeCoster and Steven R. Chesley and Brent Barbee and Harrison F. Agrusa and Saverio Cambioni and Andrew F. Cheng and Elisabetta Dotto and Siegfried Eggl and Eugene G. Fahnestock and Fabio Ferrari and Dawn Graninger and Alain Herique and Isabel Herreros and Masatoshi Hirabayashi and Stavro Ivanovski and Martin Jutzi and {\"O}zg{\"u}r Karatekin and Alice Lucchetti and Robert Luther and \textbf{R. Makadia} and Francesco Marzari and Patrick Michel and Naomi Murdoch and Ryota Nakano and Jens Orm{\"o} and Maurizio Pajola and Andrew S. Rivkin and Alessandro Rossi and Paul S{\'a}nchez and Stephen R. Schwartz and Stefania Soldini and Damya Souami and Angela Stickle and Paolo Tortora and Josep M. Trigo-Rodr{\'i}guez and Flaviane Venditti and Jean-Baptiste Vincent and Kai W{\"u}nnemann},
+	author = {Thomas S. Statler and Sabina D. Raducan and Olivier S. Barnouin and Mallory E. DeCoster and Steven R. Chesley and Brent Barbee and Harrison F. Agrusa and Saverio Cambioni and Andrew F. Cheng and Elisabetta Dotto and Siegfried Eggl and Eugene G. Fahnestock and Fabio Ferrari and Dawn Graninger and Alain Herique and Isabel Herreros and Masatoshi Hirabayashi and Stavro Ivanovski and Martin Jutzi and {\"O}zg{\"u}r Karatekin and Alice Lucchetti and Robert Luther and Rahil Makadia and Francesco Marzari and Patrick Michel and Naomi Murdoch and Ryota Nakano and Jens Orm{\"o} and Maurizio Pajola and Andrew S. Rivkin and Alessandro Rossi and Paul S{\'a}nchez and Stephen R. Schwartz and Stefania Soldini and Damya Souami and Angela Stickle and Paolo Tortora and Josep M. Trigo-Rodr{\'i}guez and Flaviane Venditti and Jean-Baptiste Vincent and Kai W{\"u}nnemann},
 	doi = {10.3847/PSJ/ac94c1},
 	journal = {The Planetary Science Journal},
 	month = {10},
@@ -116,7 +116,7 @@
 }
 
 @article{Makadia2022,
-	author = {\textbf{R. Makadia} and Sabina D. Raducan and Eugene G. Fahnestock and Siegfried Eggl},
+	author = {Rahil Makadia and Sabina D. Raducan and Eugene G. Fahnestock and Siegfried Eggl},
 	doi = {10.3847/PSJ/ac7de7},
 	journal = {The Planetary Science Journal},
 	month = {08},
@@ -130,7 +130,7 @@
 }
 
 @article{Richardson2022,
-	author = {Derek C. Richardson and Harrison F. Agrusa and Brent Barbee and William F. Bottke and Andrew F. Cheng and Siegfried Eggl and Fabio Ferrari and Masatoshi Hirabayashi and {\"O}zg{\"u}r Karatekin and Jay McMahon and Stephen R. Schwartz and Ronald-Louis Ballouz and Adriano Campo Bagatin and Elisabetta Dotto and Eugene G. Fahnestock and Oscar Fuentes-Mu{\~n}oz and Ioannis Gkolias and Douglas P. Hamilton and Seth A. Jacobson and Martin Jutzi and Josh Lyzhoft and \textbf{R. Makadia} and Alex J. Meyer and Patrick Michel and Ryota Nakano and Guillaume Noiset and Sabina D. Raducan and Nicolas Rambaux and Alessandro Rossi and Paul S{\'a}nchez and Daniel J. Scheeres and Stefania Soldini and Angela M. Stickle and Paolo Tanga and Kleomenis Tsiganis and Yun Zhang},
+	author = {Derek C. Richardson and Harrison F. Agrusa and Brent Barbee and William F. Bottke and Andrew F. Cheng and Siegfried Eggl and Fabio Ferrari and Masatoshi Hirabayashi and {\"O}zg{\"u}r Karatekin and Jay McMahon and Stephen R. Schwartz and Ronald-Louis Ballouz and Adriano Campo Bagatin and Elisabetta Dotto and Eugene G. Fahnestock and Oscar Fuentes-Mu{\~n}oz and Ioannis Gkolias and Douglas P. Hamilton and Seth A. Jacobson and Martin Jutzi and Josh Lyzhoft and Rahil Makadia and Alex J. Meyer and Patrick Michel and Ryota Nakano and Guillaume Noiset and Sabina D. Raducan and Nicolas Rambaux and Alessandro Rossi and Paul S{\'a}nchez and Daniel J. Scheeres and Stefania Soldini and Angela M. Stickle and Paolo Tanga and Kleomenis Tsiganis and Yun Zhang},
 	doi = {10.3847/PSJ/ac76c9},
 	journal = {The Planetary Science Journal},
 	month = {07},
